# domarkx

./: .env.example  .gitignore  README.md  domarkx.py  pyproject.toml
domarkx/: __init__.py  models_logging.py
domarkx/action/: exec_doc.py  exec_doc_code_block.py  extract_code_to_file.py  roo_code.py
domarkx/models/: openrouter.py
domarkx/tool_call/roo_code/: __init__.py  parser.py  tool.py
domarkx/tool_call/roo_code/tools/: apply_diff.py  ask_followup_question.py  attempt_completion.py  execute_command.py  insert_content.py  list_code_definition_names.py  list_files.py  modify_python_ast.py  read_file.py  search_and_replace.py  search_files.py  view_code_definition.py  write_to_file.py
domarkx/utils/: agent_fs_map.py  chat_doc_parser.py  no_border_rich_tracebacks.py
domarkx_session/preset/: gemini.md  gemini.py  openrouter-deepseek.md
domarkx_session/session/: start.md
editors/code/: CHANGELOG.md  README.md  package-lock.json  package.json
editors/code/src/: extension.ts
